tests/error/template_no_match.gw
// [contains] arguments do not match for template call
class C {
  function<~A~> void test(float f) {}
  function<~A~> void test() {}
}
C c;
//c.test<~int~>();
c.test<~int~>(2.3);
c.test<~int~>(2.3, 2.3);
